[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "social-auto-upload"
version = "0.1.0"
description = "Social media auto uploader"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  # `cryptography` powers at-rest encryption for cookie files
  # (myUtils/cookie_storage.py). Encryption is opt-in via the
  # SAU_COOKIE_ENCRYPTION_KEY env var; without the key the project still
  # writes plaintext cookies, but the dependency is always installed so
  # the encryption code path is unconditionally importable.
  "cryptography>=42.0.0",
  "loguru==0.7.3",
  # `utils/login_qrcode.py` imports these at runtime. Keep them mirrored
  # with requirements.txt because Docker / legacy installs still use it.
  "opencv-python-headless==4.13.0.92",
  # `patchright` is a stealth-patched fork of `playwright` with the same
  # async API. Every uploader and the Flask login/auth helpers go through
  # it; we no longer ship the upstream `playwright` package alongside.
  "patchright==1.58.2",
  "qrcode==8.2",
  "requests==2.32.3",
  "segno==1.6.6",
  # `alembic` drives the SQLite schema migrations under migrations/.
  # `db/createTable.py` is now a thin wrapper around `alembic upgrade head`.
  "alembic>=1.13",
]

[project.scripts]
sau = "sau_cli:main"

[project.optional-dependencies]
web = [
  "Flask[async]==3.1.1",
  "flask-cors==6.0.0",
]

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["conf", "sau_cli"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["uploader*", "utils*", "myUtils*", "db*"]

[tool.setuptools.package-data]
utils = ["stealth.min.js"]
